2011-06-16  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport form main line
	2011-06-09  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/49307
	* config/sh/sh.md (UNSPEC_CHKADD): New.
	(chk_guard_add): New define_insn_and_split.
	(symGOT_load): Use chk_guard_add instead of blockage.

2011-06-16  Martin Jambor  <mjambor@suse.cz>

	Backported from mainline
	2011-06-15  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/48613
	* ipa-prop.c (ipa_prop_write_jump_functions): Return immediately if
	ipa_node_params_vector is NULL.

2011-06-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49419
	* tree-vrp.c (execute_vrp): Call init_range_assertions
	before estimate_numbers_of_iterations, call
	free_number_of_iterations_estimates before calling
	remove_range_assertions.

	Backported from mainline
	2011-06-13  Edmar Wienskoski  <edmar@freescale.com>

	PR target/44618
	* config/rs6000/rs6000.md (save_gpregs_<mode>): Replaced pattern
	with a set of similar patterns, where the MATCH_OPERAND for the
	function argument is replaced with individual references to hardware
	registers.
	(save_fpregs_<mode>): Ditto
	(restore_gpregs_<mode>): Ditto
	(return_and_restore_gpregs_<mode>): Ditto
	(return_and_restore_fpregs_<mode>): Ditto
	(return_and_restore_fpregs_aix_<mode>): Ditto

2011-06-14  Richard Henderson  <rth@redhat.com>

	PR debug/48459
	* dwarf2out.c (frame_pointer_fb_offset_valid): New.
	(based_loc_descr): Assert it's true.
	(compute_frame_pointer_to_fb_displacement): Set it,
	rather than aborting immediately.

2011-06-14  Richard Henderson  <rth@redhat.com>

	Backport from mainline
	2011-03-22  Richard Henderson  <rth@redhat.com>

	* config/avr/avr.c (TARGET_EXCEPT_UNWIND_INFO): New.
	(avr_incoming_return_addr_rtx): New.
	(emit_push_byte): New.
	(expand_prologue): Use it.  Remove incorrect dwarf annotation for
	SREG, RAMPZ, zero register.  Push frame pointer by bytes.  Add dwarf
	annotation for __prologue_saves__.  Fixup dwarf annotation for CFA.